2017-01-04	More syntactic sugar for strings.

		share/innocent-pear/omnomnom.lxx :
		- added $$"..." and $$L"..."

		test/test-dawg-syn.cc ,
		test/test-doge-with-dawg.cc ,
		test/test-yodawg-syn.cc :
		- added testing of $$"..." and $$L"..."

		include/innocent-pear/omg.h :
		- now only uses FS_IOC_GETFLAGS and FS_IOC_GETVERSION ioctls
		  if allow_resource_unsafes is on

		README.md :
		- added brief note on syntactic sugar for strings
		- _Description_ now comes before _Synopsis_

2017-01-02	Be even less verbose.

		bin/innocent-pear-dogecoin.cc :
		- now cuts off long lists of section names in its stderr
		  output

2016-12-31	Looks stable and somewhat symmetrical.

		include/innocent-pear/dawg.h :
		- factored dawg_impl<...> into two classes, dawg_impl_1<...>
		  and dawg_impl_2<...>
		- dawg_impl_2<...>::operator>>(.) now writes characters in
		  random order

		include/innocent-pear/omg.h :
		- now uses dawg_impl_2<...> instead of dawg_impl<...>
		- made buffer for "/dev/tty" oversized

		include/innocent-pear/yodawg.h :
		- now uses dawg_impl_2<...> instead of dawg_impl<...>

		share/innocent-pear/doge-i.h :
		- further reduced output of innocent_pear_CHAFF(.)

2016-12-30	"No, I'm a frayed knot."  (2)

		include/innocent-pear/orly.h ,
		include/innocent-pear/yarly.h :
		- yarly<...>::wut(...) ~> orly<...>::wot(...)
		- yarly<...>::zot(...) ~> orly<...>::zot(...)

		include/innocent-pear/omg.h :
		- changed to use orly<...>::zot(...)

		include/innocent-pear/host/rly.h :
		- removed rly<...>::wut(...)

		share/innocent-pear/doge-01.cc :
		- combined 3 functions into one huge function -- again

		test/test-doge-with-dawg.cc ,
		test/test-doge-with-dawg.good :
		- new

		GNUmakefile :
		- added test-doge-with-dawg test case

2016-12-29	"No, I'm a frayed knot."

		include/innocent-pear/teh.h :
		- added a layer of indirection to allow several "variables"
		  to be shared, by grouping identical constants into "bins"
		- "variables" may now go into read-only data